fix error overlap (#609)

--- a/src/app/forms/components/dynamic-form-group/dynamic-form-group.component.scss
+++ b/src/app/forms/components/dynamic-form-group/dynamic-form-group.component.scss
@@ -15,30 +15,18 @@
   justify-content: space-between;
 }
 
-@media screen and (min-width: 400px) {
-  .style-float-right-medium {
-    float: right;
-    padding-right: 1.5rem;
-    height: 0.5rem;
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  column-gap: 1rem;
+
+  & > * {
+    min-width: 250px;
+    flex-basis: 100%;
   }
-  .style-float-right-medium {
-    float: right;
-    padding-right: 1.5rem;
-    height: 0.5rem;
-  }
-  .style-float-right-small {
-    float: right;
-    padding-right: 10rem;
-    height: 0.5rem;
-  }
-}
-@media screen and (min-width: 900px) {
-  .style-float-right-medium {
-    padding-right: 15rem;
-    height: 0.5rem;
-  }
-  .style-float-right-small {
-    padding-right: 30rem;
-    height: 0.5rem;
+
+  &--half {
+    flex-basis: calc(50% - 1rem) !important;
   }
 }
